<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:id="@+id/login_layout"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="id.filkom.mat.foodcab.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="30dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_border_edittext"
                android:maxLines="1"
                android:singleLine="true" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_border_edittext"
                android:singleLine="true" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/AppTheme.Button"
                android:layout_width="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="17dp"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:text="Masuk" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Belum Punya Akun?"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:id="@+id/text_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Daftar"
                    android:textColor="#ff2d5e"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
